GoNoGo/force-app/main/default/objects/GoNoGoSetting__c/GoNoGoSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To set default configurations for Go/No-Go.</description>
    <label>Loopio Go/No-Go Settings</label>
</CustomObject>