GoNoGo/force-app/main/default/objects/GoNoGoSetting__c/fields/Assignee_Notification__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store assignee notification enable/disable value.</description>
    <label>Assignee Notification</label>
    <type>Checkbox</type>
</CustomField>