GoNoGo/force-app/main/default/objects/GoNoGoSetting__c/fields/Auto_Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Auto_Submit_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To send Go/No-Go for approval automatically if the score is below threshold value.</description>
    <label>Auto Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>