GoNoGo/force-app/main/default/objects/GoNoGoSetting__c/fields/Days_For_Reminder_Notification__c.field-meta.xml
<CustomField>
    <fullName>Days_For_Reminder_Notification__c</fullName>
    <description>To store reminder notification days value.</description>
    <label>Days For Reminder Notification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>