GoNoGo/force-app/main/default/objects/GoNoGoSetting__c/fields/Default_Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Configuration_Name__c</fullName>
    <description>Stores default configuration name which will open on click of Go/No-Go button on salesforce opportunity.</description>
    <label>Default Configuration Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>