GoNoGo/force-app/main/default/objects/GoNoGoSetting__c/fields/Disable_Answer_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Answer_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created from a developer point of view while importing large amounts of data.</description>
    <label>Disable Answer Trigger</label>
    <type>Checkbox</type>
</CustomField>