GoNoGo/force-app/main/default/objects/GoNoGoSetting__c/fields/Opportunity_Stage_For_Notification__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_For_Notification__c</fullName>
    <description>Stores the opportunity stage when to trigger the email notification.</description>
    <label>Opportunity Stage For Notification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>