GoNoGo/force-app/main/default/objects/GoNoGoSetting__c/fields/Reminder_Notification__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store reminder notification enable/disable value.</description>
    <label>Reminder Notification</label>
    <type>Checkbox</type>
</CustomField>