GoNoGo/force-app/main/default/objects/GoNoGoSetting__c/fields/Threshold_Score_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Score_for_Approval__c</fullName>
    <description>Threshold score for sending Go/No-Go for approval.</description>
    <label>Threshold Score for Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>